[package]
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
description = "Macro 1.1 implementation for 'mockers' mocking library"
keywords = ["mock", "test"]
license = "MIT"
name = "mockers_derive"
repository = "https://github.com/kriomant/mockers"
version = "0.12.1"

[dependencies]
syn = { version = "0.14.8", features = ["full", "extra-traits"] }
quote = "0.6"
itertools = "0.4.13"
lazy_static = "1.1.0"
synom = "0.11.3"
proc-macro2 = "0.4.13"

[build-dependencies]

[dev-dependencies]
mockers = { version = "0.12.1", path = "../mockers" }

[lib]
name = "mockers_derive"
proc-macro = true

[features]
debug = []
